@@ -15,10 +15,11 @@ my $match_res;
 foreach my $reason (undef, "", 0, "Bla bla bla") {
     foreach my $name ("", "Baz", "Qux Quux") {
         foreach my $match (0, 1) {
+            my $pattern = $match ? qr {Foo} : qr {Bar};
             my ($premature, @results) = run_tests sub {
 #line 999 160_show_line
                 $match_res = match subject   => "Foo",
-                                   pattern   => $match ? qr {Foo} : qr {Bar},
+                                   pattern   => $pattern,
                                    match     => $match,
                                    reason    => $reason,
                                    test      => $reason,
@@ -31,7 +32,7 @@ foreach my $reason (undef, "", 0, "Bla bla bla") {
                   expected  => $match ? 'PPPP' : 'P',
                   match     => $match,
                   match_res => $match_res,
-                  pattern   => 'Bar',
+                  pattern   => $pattern,
                   subject   => "Foo",
                   comment   => $name,
                   keep      => 0,
